# avxs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml  docs.md
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: appimage.yml  build-publish.yml  cla-check.yml  integration.yml  release.yml
packaging/appimage/: avxs.desktop
src/: audio.rs  config.rs  crop.rs  encode.rs  ext.rs  ffms2.rs  hdr.rs  job.rs  main.rs  paths.rs  resume.rs  scanner.rs  scene.rs  subtitle.rs  target_quality.rs  vmaf.rs  workers.rs
test/: lib.sh  run.sh
test/suites/: audio.sh  config.sh  crop.sh  encode.sh  hdr.sh  job.sh  scanner.sh  scene.sh  subtitle.sh  target_quality.sh
